# e2map

./: .gitignore  LICENSE  README.md  env.yml
src/e2map/: CMakeLists.txt  package.xml
src/e2map/launch/: pointcloud_of_costmap.launch  publish_map.launch  publish_subgoal_coordinates.launch
src/e2map/scripts/: map.py  pointcloud.py  scf.py  scf_wrapper.py  subgoal_filter_parser.py  topology_graph.py
src/e2map/utils/: clip_mapping_utils.py  clip_utils.py
src/environment/dynamic_objects/: CMakeLists.txt  package.xml
src/environment/dynamic_objects/include/: actor_follower.h  gazebo_ros_actor_command.h
src/environment/dynamic_objects/launch/: danger_sign.launch  dynamic_door.launch  human_wall.launch  reset_actor.launch
src/environment/dynamic_objects/models/: flip_door_left.sdf  hinged_door.sdf  make_actor.sdf
src/environment/dynamic_objects/scripts/: path_publisher.py
src/environment/dynamic_objects/src/: DynamicDoorPlugin.cc  actor_follower.cpp  gazebo_ros_actor_command.cpp  reset_actor.py  reset_go1.py
src/environment/go1/: CMakeLists.txt  package.xml
src/environment/go1/launch/: go.launch
src/environment/go1/src/: go.py
src/environment/go1/src/ucl/: highState.py  setup.py
src/environment/models/209/: model.config  model.sdf
src/environment/models/209/materials/scripts/: 209.material
src/environment/models/danger_sign/: model.config  model.sdf
src/environment/models/danger_sign/materials/scripts/: danger_sign.material
src/environment/models/danger_sign/meshes/: model.dae
src/environment/models/plane/: model.config  model.sdf
src/environment/models/plane/materials/scripts/: plane.material
src/environment/models/plane/meshes/: plane.dae
src/environment/test_zone/: CMakeLists.txt  package.xml
src/environment/test_zone/launch/: teleop_key.launch
src/environment/test_zone/nodes/: teleop_key
src/environment/test_zone/urdf/: realsense.xacro
src/environment/test_zone/worlds/: models.world
src/environment/unitree/unitree_guide/unitree_actuator_sdk/: CMakeLists.txt
src/environment/unitree/unitree_guide/unitree_actuator_sdk/include/: LSerial.h  motor_ctrl.h  motor_msg.h
src/environment/unitree/unitree_guide/unitree_actuator_sdk/script/: check.py  typedef.py
src/environment/unitree/unitree_guide/unitree_actuator_sdk/src/: check.cpp
src/environment/unitree/unitree_guide/unitree_guide/: CMakeLists.txt
src/environment/unitree/unitree_ros/unitree_controller/: CMakeLists.txt
src/environment/unitree/unitree_ros/unitree_gazebo/: CMakeLists.txt
src/environment/unitree/unitree_ros/unitree_legged_control/: package.xml
src/environment/unitree/unitree_ros/unitree_ros_to_real/unitree_legged_sdk/: CMakeLists.txt
src/experiment/: CMakeLists.txt  encode_img_feat.py  package.xml
src/experiment/config/: e2map_danger_config.yaml  e2map_door_config.yaml  e2map_human_config.yaml  lm_nav_danger_config.yaml  lm_nav_door_config.yaml  lm_nav_human_config.yaml  vlmap_danger_config.yaml  vlmap_door_config.yaml  vlmap_human_config.yaml
src/experiment/launch/: e2map_danger.launch  e2map_door.launch  e2map_human.launch  goal_selector.launch  lm_nav_danger.launch  lm_nav_door.launch  lm_nav_human.launch  success_counter.launch  vlmap_danger.launch  vlmap_door.launch  vlmap_human.launch
src/experiment/scenarios/: danger.txt  door.txt  human.txt
src/experiment/src/: goal_selector_wrapper.py  success_counter.py
src/foundations/: CMakeLists.txt  goal_selector_web.py  package.xml
src/foundations/e2map_update/: emotion_evaluator.py  event_descriptor.py  self_reflection.sh
src/foundations/scripts/: gpt.sh  ollama.sh
src/foundations/utils/: prompt.py  sftp.py
src/langnav/: CMakeLists.txt  package.xml
src/langnav/config/: config.yaml
src/langnav/launch/: langnav.launch
src/langnav/rviz/: langnav.rviz
src/models/lseg/additional_utils/: encoding_models.py
src/models/lseg/modules/models/: lseg_net.py  lseg_vit.py
src/navigation/localization/hdl_global_localization/: CMakeLists.txt
src/navigation/localization/hdl_global_localization/src/: hdl_global_localization_test.cpp
src/navigation/localization/hdl_localization/: CMakeLists.txt  nodelet_plugins.xml  package.xml
src/navigation/localization/hdl_localization/apps/: gazebo_localization_nodelet.cpp  globalmap_server_nodelet.cpp  hdl_localization_nodelet.cpp  odom_to_velodyne_tf_nodelet.cpp
src/navigation/localization/hdl_localization/launch/: hdl_localization.launch
src/navigation/localization/hdl_localization/rviz/: hdl_localization.rviz
src/navigation/perception/: CMakeLists.txt  package.xml
src/navigation/perception/include/: collision_detection.h  collision_detection_gazebo.h
src/navigation/perception/launch/: collision_detection.launch
src/navigation/perception/rviz/: collision_detection.rviz
src/navigation/perception/src/: collision_detection.cpp  collision_detection_gazebo.cpp
src/navigation/planning/path_planner/: CMakeLists.txt  package.xml
src/navigation/planning/path_planner/include/: dstar.h  occupancy_grid_map.h  planner_dstar.h  priority_node.h  priority_queue.h  utils.h
src/navigation/planning/path_planner/launch/: path_planner.launch
src/navigation/planning/path_planner/rviz/: debug.rviz
src/navigation/planning/path_planner/src/: dstar.cpp  occupancy_grid_map.cpp  planner_dstar.cpp  priority_node.cpp  priority_queue.cpp  utils.cpp
src/navigation/planning/path_tracker/: CMakeLists.txt  package.xml
src/navigation/planning/path_tracker/config/: dynamic_reconfig_for_mppi.cfg  go1.yaml  mppi.rviz  mppi.yaml
src/navigation/planning/path_tracker/include/: action.h  cost.h  dummy_path.h  dynamics.h  misc.h  path_tracker.h  regression.h  state.h  transform.h
src/navigation/planning/path_tracker/launch/: path_tracker.launch
src/navigation/planning/path_tracker/path/: custom_path.csv
src/navigation/planning/path_tracker/src/: action.cpp  communication.cpp  cost.cpp  dummy_path.cpp  dynamics.cpp  misc.cpp  path_tracker.cpp  regression.cpp  state.cpp  transform.cpp  visualization.cpp
(+28 files in other folders)
